<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>roart</groupId>
    <artifactId>stockstat-parent</artifactId>
    <relativePath>../pom.xml</relativePath>
    <version>0.5-SNAPSHOT</version>
  </parent>
  <groupId>roart</groupId>
  <artifactId>stockstat-core</artifactId>
  <version>0.5-SNAPSHOT</version>
  <packaging>jar</packaging>
  <name>Stock Statistics Core</name>
  <!--name>Vaadin Web Application</name-->
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
	<version>2.3.2</version>
        <configuration>
          <source>${jdk.version}</source>
          <target>${jdk.version}</target>
	  <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
      <plugin>
	<groupId>org.codehaus.mojo</groupId>
	<artifactId>tomcat-maven-plugin</artifactId>
	<version>1.2-SNAPSHOT</version>
	<configuration>
	  <!--url>http://192.168.1.7:8080/manager</url-->
	  <server>mytomcat</server>
	  <!--path>/mywebapp</path-->
	</configuration>
      </plugin>
      <plugin>
	<groupId>org.mortbay.jetty</groupId>
	<artifactId>jetty-maven-plugin</artifactId>
      </plugin>
      <plugin>
	<groupId>org.springframework.boot</groupId>
	<artifactId>spring-boot-maven-plugin</artifactId>
	<version>1.2.5.RELEASE</version>
	<executions>
	  <execution>
	    <goals>
	      <goal>repackage</goal>
	    </goals>
	  </execution>
	</executions>
      </plugin>
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-install-plugin</artifactId>
	<version>2.4</version>
	<configuration>
	  <skip>true</skip>
	</configuration>
      </plugin>
    </plugins>
  </build>
  <dependencyManagement>
    <dependencies>
      <dependency>
	<groupId>org.springframework.cloud</groupId>
	<artifactId>spring-cloud-dependencies</artifactId>
	<version>Brixton.SR7</version>
	<type>pom</type>
	<scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <dependencies>
    <dependency>
      <groupId>org.springframework.cloud</groupId>
      <artifactId>spring-cloud-starter-eureka</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.cloud</groupId>
      <artifactId>spring-cloud-commons</artifactId>
      <version>1.1.7.RELEASE</version>
    </dependency>
    <dependency>
      <groupId>com.netflix.eureka</groupId>
      <artifactId>eureka-client</artifactId>
      <version>1.6.1</version>
    </dependency>
    <!-- spark wants older jackson, 2.8 incompatible -->
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-annotations</artifactId>
      <version>2.6.5</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>2.6.5</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-core</artifactId>
      <version>2.6.5</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter</artifactId>
      <version>1.5.2.RELEASE</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
      <version>1.5.2.RELEASE</version>
      <exclusions>
	<exclusion>
	  <groupId>org.springframework.boot</groupId>
	  <artifactId>spring-boot-starter-tomcat</artifactId>
	</exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-jetty</artifactId>
      <version>1.5.2.RELEASE</version>
    </dependency>
    <dependency>
      <groupId>roart</groupId>
      <artifactId>stockstat-common-model</artifactId>
      <version>0.5-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>roart</groupId>
      <artifactId>stockstat-common-constants</artifactId>
      <version>0.5-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>roart</groupId>
      <artifactId>stockstat-common-config</artifactId>
      <version>0.5-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>roart</groupId>
      <artifactId>stockstat-common-service</artifactId>
      <version>0.5-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>roart</groupId>
      <artifactId>stockstat-db</artifactId>
      <version>0.5-SNAPSHOT</version>
    </dependency>
    <dependency>
        <groupId>jdk.tools</groupId>
        <artifactId>jdk.tools</artifactId>
	<version>1.8</version>
        <scope>system</scope>
        <systemPath>${java.home}/../lib/tools.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-core</artifactId>
      <version>${hibernate.version}</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-log4j12</artifactId>
      <version>${slf4j.version}</version>
    </dependency>	   
    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.17</version>
    </dependency>
  <dependency>
    <groupId>org.apache.xmlgraphics</groupId>
    <artifactId>batik-transcoder</artifactId>
    <version>${batik.version}</version>
  </dependency>
  <dependency>
    <groupId>org.jfree</groupId>
    <artifactId>jfreesvg</artifactId>
    <version>${jfreesvg.version}</version>
  </dependency>
  <dependency>
    <groupId>org.jfree</groupId>
    <artifactId>jfreechart</artifactId>
    <version>${jfreechart.version}</version>
  </dependency>
  <dependency>
    <groupId>org.apache.commons</groupId>
    <artifactId>commons-math3</artifactId>
    <version>${commons.math3.version}</version>
  </dependency>
  <dependency>
    <groupId>xml-apis</groupId>
    <artifactId>xml-apis</artifactId>
    <version>${xmlapis.version}</version>
  </dependency>
  <!-- https://mvnrepository.com/artifact/com.tictactec/ta-lib -->
  <dependency>
    <groupId>com.tictactec</groupId>
    <artifactId>ta-lib</artifactId>
    <version>0.4.0</version>
  </dependency>
  <dependency>
    <groupId>org.apache.commons</groupId>
    <artifactId>commons-configuration2</artifactId>
    <version>${commons.version}</version>
  </dependency>
<dependency>
    <groupId>commons-beanutils</groupId>
    <artifactId>commons-beanutils</artifactId>
    <version>1.9.3</version>
</dependency>
  <dependency>
      <groupId>org.apache.spark</groupId>
      <artifactId>spark-core_2.11</artifactId>
      <version>${spark.version}</version>
  </dependency>
  <dependency>
    <groupId>org.apache.spark</groupId>
    <artifactId>spark-sql_2.11</artifactId>
    <version>${spark.version}</version>
  </dependency>
     <dependency>
      <groupId>org.apache.spark</groupId>
      <artifactId>spark-mllib_2.11</artifactId>
      <version>${spark.version}</version>
      </dependency>
  <dependency>
    <groupId>postgresql</groupId>
    <artifactId>postgresql</artifactId>
    <version>9.1-901-1.jdbc4</version>
  </dependency>
<dependency>
    <groupId>org.mockito</groupId>
    <artifactId>mockito-all</artifactId>
    <version>1.10.19</version>
</dependency>
    <dependency>
      <groupId>roart</groupId>
      <artifactId>stockstat-common-eureka</artifactId>
      <version>0.5-SNAPSHOT</version>
    </dependency>
    </dependencies>
  <properties>
    <jetty.version>9.3.14.v20161028</jetty.version>
    <jdk.version>1.8</jdk.version>
    <lucene.version>5.1.0</lucene.version>
    <solr.version>5.1.0</solr.version>
    <hbase.version>1.0.1</hbase.version>
    <tika.version>1.10</tika.version>
    <mahout.version>0.9</mahout.version>
    <opennlp.version>1.5.3</opennlp.version>
    <hadoop.version>2.6.0</hadoop.version>
    <datanucleus.version>4.1.0-release</datanucleus.version>
    <jdo.version>3.0.1</jdo.version>
    <zookeeper.version>3.4.6</zookeeper.version>
    <curator.version>3.0.0</curator.version>
    <hazelcast.version>3.5.3</hazelcast.version>
    <batik.version>1.8</batik.version>
    <jfreesvg.version>3.0</jfreesvg.version>
    <jfreechart.version>1.0.19</jfreechart.version>
    <commons.math3.version>3.6.1</commons.math3.version>
    <dbunit.dataTypeFactoryName>org.dbunit.ext.h2.H2DataTypeFactory</dbunit.dataTypeFactoryName>
    <hibernate.version>5.0.5.Final</hibernate.version>
    <hibernate.dialect>org.hibernate.dialect.H2Dialect</hibernate.dialect>
    <hibernate.hbm2ddl.auto>create</hibernate.hbm2ddl.auto>
    <h2.version>1.4.187</h2.version>
    <jdbc.groupId>com.h2database</jdbc.groupId>
    <jdbc.artifactId>h2</jdbc.artifactId>
    <jdbc.version>1.3.160</jdbc.version>
    <jdbc.driverClassName>org.h2.Driver</jdbc.driverClassName>
    <jdbc.url><![CDATA[jdbc:h2:${h2dir}]]>
    </jdbc.url>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <vaadin.version>7.6.0</vaadin.version>
    <vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
    <gwt.version>2.3.0</gwt.version>
    <gwt.plugin.version>2.2.0</gwt.plugin.version>
    <slf4j.version>1.7.12</slf4j.version>
    <ehcache.version>2.6.11</ehcache.version>
    <servlet.version>3.1.0</servlet.version>
    <guava.version>16.0.1</guava.version>
    <xmlapis.version>1.4.01</xmlapis.version>
    <commons.version>2.1.1</commons.version>
    <spark.version>2.1.0</spark.version>
  </properties>
	<repositories>
		<repository>
			<id>vaadin-addons</id>
			<url>http://maven.vaadin.com/vaadin-addons</url>
		</repository>
		<repository>
			<id>vaadin-snapshots</id>
			<url>http://oss.sonatype.org/content/repositories/vaadin-snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>vaadin-snapshots</id>
			<url>http://oss.sonatype.org/content/repositories/vaadin-snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

</project>

